# reportai

./: .env  .windsurfrules  KEY.PY  README.md
backend/: .env  .gitignore  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: b728227ee9e0_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: auth.py  references.py  report.py  sections.py  user.py
backend/app/core/: config.py  content_generation.py  database.py  logger.py  security.py
backend/app/db/: base.py  check_db.py  session.py
backend/app/models/: __init__.py  base.py  chapter.py  enums.py  file_upload.py  reference.py  report.py  section.py  user.py
backend/app/schemas/: __init__.py  auth.py  chapter.py  file_upload.py  reference.py  report.py  section.py  user.py
backend/app/services/: auth.py  report.py
